--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@tailwindcss/vite": "^4.1.11",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^5.0.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "next": "15.3.4",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "prisma": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
@@ -19,13 +34,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@nestjs/testing": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4.1.11",
+    "postcss": "^8.4.31",
+    "supertest": "^6.3.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
