--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.6",
     "pino": "^9.3.0",
     "redis": "^5.8.2",
     "zod": "^3.23.8"
