--- a/front-end/package.json
+++ b/front-end/package.json
@@ -43,6 +43,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.15",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -70,6 +71,7 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   }
