--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -52,6 +53,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
+    "lucia": "^3.2.2",
     "lucide-react": "^0.446.0",
     "next": "15.3.4",
     "next-themes": "^0.3.0",
@@ -59,9 +61,9 @@
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "postcss": "^8.4.30",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
@@ -73,8 +75,6 @@
     "typescript": "5.2.2",
     "uuid": "^13.0.0",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8",
-    "lucia": "^3.2.2",
-    "@lucia-auth/adapter-prisma": "^4.0.1"
+    "zod": "^3.23.8"
   }
 }
