--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/src/server.ts",
+      "src": "backend/api/**/*.ts",
       "use": "@vercel/node"
     },
     {
@@ -13,11 +13,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/backend/src/server.ts"
-    },
-    {
-      "source": "/:path*",
-      "destination": "/front-end/:path*"
+      "destination": "/backend/api/api/:path*"
     }
   ]
 }
