--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,11 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/backend/api/api/:path*"
+      "destination": "/backend/api/:path*"
+    },
+    {
+      "source": "/:path*",
+      "destination": "/front-end/:path*"
     }
   ]
 }
