--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,14 @@
   "devCommand": "npm run dev",
   "builds": [
     {
-      "src": "backend/api/**/*.ts",
+      "src": "api/**/*.ts",
       "use": "@vercel/node",
       "config": {
         "rootDirectory": "backend"
       }
     },
     {
-      "src": "front-end/package.json",
+      "src": "package.json",
       "use": "@vercel/next",
       "config": {
         "rootDirectory": "front-end"
