--- a/front-end/package.json
+++ b/front-end/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.15",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -54,6 +55,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucia": "^3.2.2",
     "lucide-react": "^0.446.0",
     "next": "15.3.4",
