--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "installCommand": "npm install",
+  "buildCommand": "cd front-end && npm run build",
   "devCommand": "npm run dev",
   "builds": [
     {
