--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,10 +40,12 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.90.7",
     "@types/node": "20.6.2",
     "@types/nodemailer": "^6.4.8",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.15",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -78,6 +80,8 @@
     "typescript": "5.2.2",
     "uuid": "^13.0.0",
     "vaul": "^0.9.9",
+    "viem": "^2.38.6",
+    "wagmi": "^2.19.2",
     "zod": "^3.23.8"
   }
 }
