--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@privy-io/react-auth": "^3.6.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -78,6 +79,8 @@
     "typescript": "5.2.2",
     "uuid": "^13.0.0",
     "vaul": "^0.9.9",
+    "viem": "^2.39.0",
+    "wagmi": "^2.19.3",
     "zod": "^3.23.8"
   }
 }
