--- a/front-end/package.json
+++ b/front-end/package.json
@@ -82,6 +82,11 @@
     "vaul": "^0.9.9",
     "viem": "^2.38.6",
     "wagmi": "^2.19.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@prisma/client": "^5.17.0",
+    "@upstash/redis": "^1.20.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
