--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,12 +7,20 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug",
+    "test:signup": "playwright test signup.spec.ts --headed",
+    "test:signup:open": "KEEP_OPEN=true playwright test signup.spec.ts --headed",
+    "test:report": "playwright show-report"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -40,11 +48,14 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.7",
     "@types/node": "20.6.2",
     "@types/nodemailer": "^6.4.8",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@upstash/redis": "^1.20.0",
     "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.15",
     "axios": "^1.12.2",
@@ -82,11 +93,11 @@
     "vaul": "^0.9.9",
     "viem": "^2.38.6",
     "wagmi": "^2.19.2",
-    "zod": "^3.23.8",
-    "@prisma/client": "^5.17.0",
-    "@upstash/redis": "^1.20.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@types/node": "^20.10.0",
     "prisma": "^5.17.0"
   }
 }
