--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   
   "scripts": {
-    "dev:fe": "npm run dev -w front-end",
-    "dev:be": "npm run dev -w backend",
-    "dev": "concurrently \"npm:dev:fe\" \"npm:dev:be\"",
-    "build:fe": "npm run build -w front-end",
-    "build:be": "npm run build -w backend",
-    "build": "npm run build:fe && npm run build:be",
-    "start:fe": "npm run start -w front-end",
-    "start:be": "npm run start -w backend",
-    "start": "concurrently \"npm:start:fe\" \"npm:start:be\"",
+    "dev": "npm run dev ",
+    
+    
+    "build": "npm run build ",
+    
+    
+    "start": "npm run start ",
+    
+   
     "lint": "npm run lint -w front-end && npm run lint -w backend",
     "typecheck": "npm run typecheck -w front-end && npm run typecheck -w backend"
   },
